kubernetes/gke/vue-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: vue
  name: vue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vue
  template:
    metadata:
      labels:
        app: vue
    spec:
      containers:
      - image: bmtben/vue-kubernetes:latest
        imagePullPolicy: Always
        name: vue
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "512Mi"
            cpu: "250m"
        ports:
            - containerPort: 8080
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
