kubernetes/gke/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: vue
          servicePort: 8080
      - path: /books
        pathType: Prefix
        backend:
          serviceName: flask
          servicePort: 5000
